--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "bugs": {
         "url": "https://github.com/galvin-SH/ds-builder/issues"
     },
-    "homepage": "https://github.com/galvin-SH/ds-builder#readme"
+    "homepage": "https://github.com/galvin-SH/ds-builder#readme",
+    "dependencies": {
+        "@mozilla/readability": "^0.5.0",
+        "axios": "^1.7.2",
+        "jsdom": "^24.1.0",
+        "puppeteer": "^22.10.0"
+    }
 }
